Updated html file

--- a/ProjectNotebook.html
+++ b/ProjectNotebook.html
@@ -14741,7 +14741,7 @@ May your heart be your guiding key!
 Encryptor 1:
 
   After encryption:
-  }á°s§hHÚýfÚz-ps§ûûÒe9Õ¹Û¯/5)
+  H)sHJúhPéúÄ²b(JúçÈqí©së¨h
 
   After decryption:
   May your heart be your guiding key!
@@ -14750,7 +14750,7 @@ Encryptor 1:
 Encryptor 2:
 
   After encryption:
-  )rkÍåØAºâ¯ÍåÄ1B oÒ7´¹áÂA
+  Lû1öº9Kø¤Î:=~º9KQ;lSCmïíoLÃ¹F
 
   After decryption:
   May your heart be your guiding key!
@@ -14759,8 +14759,7 @@ Encryptor 2:
 Encryptor 3:
 
   After encryption:
-  µÕÇqp]Hæ
-TÕÇqÀ¦}8i~CÍ gs
+  ök/duùÞØ8+Ú¬v&amp;£hduùÞ5æÃïÛ¿åA&amp;sgh
 
   After decryption:
   May your heart be your guiding key!
@@ -14769,7 +14768,7 @@ TÕÇqÀ¦}8i~CÍ gs
 Encryptor 4:
 
   After encryption:
-  Õ¥inùïx=H¶x!inùïTmPàÓêÇ­]ð]M
+  KkGCgø ~¦¨µ/GCgQdã£0?í,ÄóÑã
 
   After decryption:
   May your heart be your guiding key!
@@ -14778,8 +14777,7 @@ Encryptor 4:
 Encryptor 5:
 
   After encryption:
-  [þ¤u­@X¨»¶4nn
-Ô±­@1ã3®¡©yÍ÷c.dÝ
+  ÝÜÐëÓÆ:YHè]$Dúª/ÓÆ:Y;3ÅüéÛ]o°C
 
   After decryption:
   May your heart be your guiding key!
@@ -14788,7 +14786,7 @@ Encryptor 5:
 Encryptor 6:
 
   After encryption:
-  y|=²¶Èöz¶ÌÙ²¶»A¼Åç#ïQ&lt;%
+  h_XÖ¡?v8Ø ÖþnøÖ¡?vYñhWOÕG­8
 
   After decryption:
   May your heart be your guiding key!
@@ -14797,7 +14795,7 @@ Encryptor 6:
 Encryptor 7:
 
   After encryption:
-  \kêçx ´³Næn¨Oêç¡üs°Fý,Ü
+  ¾eodÃÉhfÅú¼ÂãÃÉUwî·é÷ïa;®]§ä
 
   After decryption:
   May your heart be your guiding key!
@@ -14806,9 +14804,7 @@ Encryptor 7:
 Encryptor 8:
 
   After encryption:
-   
-5( èW26ÚpÏ
-5@ÇñtÂÏ8 ?
+  jóoN°Ñá øÃê@^ºãö°Ñá {úC+E¯zû&#39;^
 
   After decryption:
   May your heart be your guiding key!
@@ -14817,7 +14813,7 @@ Encryptor 8:
 Encryptor 9:
 
   After encryption:
-  õ¥21ÇñÐÍ8 %ýàâ ½ÇñÐÍ]à9¾Éà­ý&#34;
+  Õ-TÚóÏ¶ØhµvFB	ÄÚóÏ¶·t}/i;O¡{TMT
 
   After decryption:
   May your heart be your guiding key!
@@ -14826,7 +14822,7 @@ Encryptor 9:
 Encryptor 10:
 
   After encryption:
-  W¯àiY×~©XpWGìzDàY×~©¡&gt;ç¦¡,}÷ Q
+  U¿1hA¡-f X­¢ü ½ÈA¡-f°a½·´oQp=-§È
 
   After decryption:
   May your heart be your guiding key!
@@ -14875,11 +14871,11 @@ Encryptor 10:
 platform linux -- Python 3.9.5, pytest-8.0.2, pluggy-1.4.0
 rootdir: /home/r2suarez/Hill-Cipher
 plugins: anyio-3.2.1
-collected 4 items                                                              
+collected 6 items                                                              <span class="ansi-bold">
 
-my_module/test_functions.py <span class="ansi-green-fg">.</span><span class="ansi-green-fg">.</span><span class="ansi-green-fg">.</span><span class="ansi-green-fg">.</span><span class="ansi-green-fg">                                         [100%]</span>
+my_module/test_functions.py </span><span class="ansi-green-intense-fg ansi-bold">.</span><span class="ansi-green-fg">.</span><span class="ansi-green-fg">.</span><span class="ansi-green-fg">.</span><span class="ansi-green-fg">.</span><span class="ansi-green-fg">.</span><span class="ansi-green-fg">                                       [100%]</span>
 
-<span class="ansi-green-fg">============================== </span><span class="ansi-green-intense-fg ansi-bold">4 passed</span><span class="ansi-green-fg"> in 0.47s</span><span class="ansi-green-fg"> ===============================</span>
+<span class="ansi-green-fg">============================== </span><span class="ansi-green-intense-fg ansi-bold">6 passed</span><span class="ansi-green-fg"> in 0.90s</span><span class="ansi-green-fg"> ===============================</span>
 </pre>
 </div>
 </div>
